# WAR

./: '  ':w  .clang-format  .clangd  .gitignore  .license_header  .rustfmt.toml  .vimdaw_license_header  1  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  WAR  ]  alsa_input.usb-MOTU_828_828E038F65-00.HiFi__Line_1__source  build.rs  build.zig  build.zig.zon  compile_commands.json  debug.md  log.md  notes.md  vimDAW
.cache/clangd/index/: AlternateSet.hh.C2C273DA14F633C3.idx  AlternateSubst.hh.97713DB1179B2EA1.idx  AlternateSubstFormat1.hh.A768C57C2C7F5883.idx  Anchor.hh.67BAAFAB0FB50C92.idx  AnchorFormat1.hh.13AFFCD2448532A4.idx  AnchorFormat2.hh.90EF7046D56D93FD.idx  AnchorFormat3.hh.2390BE7B19ECF42A.idx  AnchorMatrix.hh.C368069C3BE188E0.idx  BidiChain.c.BAB29927CCF80A81.idx  BidiChain.h.D399047777094993.idx  BidiTypeLookup.c.A326CC121DD5C737.idx  BidiTypeLookup.h.21C812CBAEB74519.idx  BracketQueue.c.BB0626853CB9B22C.idx  BracketQueue.h.7F5F5B3C0185CF44.idx  BracketType.h.DCB5CD8F2D70EB3D.idx  CBDT.hh.0B992E7E49D4F6EB.idx  COLR.hh.6A6422A01E8D70A0.idx  CPAL.hh.ED8946A9EAD9B508.idx  ChainContextPos.hh.867C32DA32F942EB.idx  ChainContextSubst.hh.1E711C9165ABF11B.idx  Common.hh.562F014D99D54B18.idx  Common.hh.77D543CD308979D5.idx  CompositeGlyph.hh.5A7E3DA560A70C76.idx  ContextPos.hh.2AEAAE94678431D9.idx  ContextSubst.hh.02990F27E789F8D4.idx  Coverage.hh.DFB10A564BC5FAFE.idx  CoverageFormat1.hh.00F6A58E25C3BAD0.idx  CoverageFormat2.hh.69492534E6587602.idx  CursivePos.hh.1FFE99DFF3C7236C.idx  CursivePosFormat1.hh.A149C52A278F690C.idx  ExtensionPos.hh.79A68905CA81F3AF.idx  ExtensionSubst.hh.51E1BB59C124172C.idx  GDEF.hh.0265394876F0BFEF.idx  GPOS.hh.F5E289D7FAA45521.idx  GSUB.hh.719BC93A5E0C2964.idx  GeneralCategoryLookup.c.F06993361BFBB438.idx  GeneralCategoryLookup.h.BA31FDDD5D262A54.idx  Glyph.hh.7639A30953B99EB6.idx  GlyphHeader.hh.5D234A5CF80798C4.idx  IsolatingRun.c.3D50590E58829E8F.idx  (+2179 more)
.zig-cache/o/57bfcd4c3946a52e6677cb0f5754a425/: vimDAW
JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
JUCE/tools/modules/: Makefile  cmake_install.cmake
config/: init.lua
doc/: ideas.md
docs/: keywords.md
include/: data.h  debug_macros.h  macros.h  main.h  vulkan.h  wayland.h
src/: audio.rs  audio_playback.cpp  bak.rs  clock.rs  colors.rs  config.rs  data.rs  data.zig  debug_macros.h  error.rs  example.c  font.rs  heart.rs  init.lua  input.rs  input_data.rs  learning.cpp  lua.rs  lua_data.rs  macros.h  macros.rs  main.c  main.cpp  main.rs  main.zig  main_engine.rs  message.rs  render.rs  render_and_input.cpp  render_and_input.cpp.bak  render_data.rs  shared.rs  state.rs  vimDAW.cpp  vimDAW.hpp  vimDAW.rs  vulkan.c  war_alsa.c  war_audio.c  war_drm.c  (+11 more)
src/after/plugin/: colors.lua
src/h/: war_alsa.h  war_commands.h  war_data.h  war_debug_macros.h  war_drm.h  war_functions.h  war_keymap_functions.h  war_lua.h  war_macros.h  war_main.h  war_vulkan.h  war_wayland.h  war_wayland_interfaces.h
src/lua/: get_libwar.lua  init.lua  map.lua  war.lua  war_get_keymap_macros.lua  war_get_libwar.lua  war_init.lua  war_main.lua
src/lua/monaco/: remap.lua  set.lua
src/shaders/: fragment.glsl  vertex.glsl  war_fragment.glsl  war_line_fragment.glsl  war_line_vertex.glsl  war_quad_fragment.glsl  war_quad_ndc_fragment.glsl  war_quad_ndc_vertex.glsl  war_quad_vertex.glsl  war_sdf_fragment.glsl  war_sdf_vertex.glsl  war_text_fragment.glsl  war_text_vertex.glsl  war_vertex.glsl
