[package]
name = "vimdaw"
version = "0.1.0"
edition = "2021"
authors = ["Nick Monaco <thenickmonaco@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
ash = { version = "0.38", features = ["linked"] }
wayland-sys = { version = "0.31", features = ["client", "dlopen"] }
libc = "0.2"

[build-dependencies]
xmltree = "0.11"

[profile.dev]
debug_assertions = true

[profile.release]
debug_assertions = false

[features]
default = []
zwp_linux_dmabuf_v1 = []
blocking = []
nonblocking = []
