[package]
name = "vimdaw"
version = "0.1.0"
edition = "2021"
authors = ["Nick Monaco <thenickmonaco@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
libc = "0.2"
thiserror = "1.0"

[profile.dev]
debug_assertions = true

[profile.release]
debug_assertions = false

[features]
default = []
zwp_linux_dmabuf_v1 = []
blocking = []
nonblocking = []
